[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/EpisodeSelectWidget.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "ViewMain"
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -640, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -640, 0 ) ]
}

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]

[node name="Menu" type="CanvasLayer" parent="."]

[node name="SelectMenu" type="Control" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Menu/SelectMenu"]
margin_left = 48.0
margin_top = 24.0
margin_right = 88.0
margin_bottom = 42.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Menu/SelectMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EpisodeSelect" parent="Menu/SelectMenu" instance=ExtResource( 1 )]
focus_neighbour_top = NodePath("../BackButton")
episode = "Demo"

[node name="EpisodeSelect2" parent="Menu/SelectMenu" instance=ExtResource( 1 )]
margin_left = 232.0
margin_right = 408.0
focus_neighbour_top = NodePath("../BackButton")
episode = "Episode1"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ViewMain = SubResource( 1 )
anims/ViewSettings = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
__meta__ = {
"_edit_group_": true
}
[connection signal="pressed" from="Menu/SelectMenu/BackButton" to="." method="_on_BackButton_pressed"]
